@@ -3,6 +3,7 @@ author  = Dave Rolsky <autarch@urth.org>
 license = Perl_5
 copyright_holder = Dave Rolsky
 
+; authordep Dist::Zilla::PluginBundle::DROLSKY = 1.18
 [@DROLSKY]
 dist = Markdent
 next_release_width = 6
@@ -41,6 +42,7 @@ stopwords = parameterized
 stopwords = parser's
 stopwords = parsers
 stopwords = preformatted
+stopwords = strikethrough
 stopwords = unordered
 stopwords = uri
 stopwords = wiki
